# libre-impuestos

./: AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  compilacion.html  config.h.in  configure  configure.ac  empaquetamiento-debian-binary.html  empaquetamiento-debian.html  index.html  params.json  screenshots.html
_includes/: compilacion.md  empaquetamiento-debian-binary.md  empaquetamiento-debian.md  libre-impuestos.md  screenshots.md
data/: F110-dependientes.form  F110-independientes.form  Makefile.am  Makefile.in  libre-impuestos-menu.ui  libre-impuestos.css  libre-impuestos.desktop.in.in  test.form  test.html  tree-data-consultor.xml  tree-data-formulario.xml  tree-data-general.xml  user.form
data/icons/: Makefile.am  Makefile.in
data/images/: Makefile.am  Makefile.in
impuesto/: Makefile.am  Makefile.in  impuesto-command.c  impuesto-command.h  libre-impuesto-common.h  libre-impuesto-window-actions.c  libre-impuesto-window-actions.h  libre-impuesto-window-private.c  libre-impuesto-window-private.h  libre-impuesto-window.c  libre-impuesto-window.h  libre-impuesto.c  libre-impuesto.h  main.c
man/: Makefile.am  Makefile.in  libre-impuestos.1  libre-impuestos.info  libre-impuestos.sgml  libre-impuestos.texi  stamp-vti
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  es_BO.po
util/: Makefile.am  Makefile.in  file-helpers.c  file-helpers.h  libre-impuesto-string.c  libre-impuesto-string.h  profile.c  profile.h  util.c  util.h
widgets/: Makefile.am  Makefile.in  gtkcsstypesprivate.h  gtkprivate.h  gtkstack.c  gtkstack.h  gtkstackswitcher.c  gtkstackswitcher.h  gtktexthandleprivate.h  gtype-hack.h  impuesto-notebook.c  impuesto-notebook.h  libre-impuesto-embed-type-builtins.c  libre-impuesto-embed-type-builtins.h  libre-impuesto-embed.c  libre-impuesto-embed.h  libre-impuesto-web-view.c  libre-impuesto-web-view.h
