# Process this file with automake to create Makefile.in
#
# Copyright 1997-1998, 2005-2010 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#


ACLOCAL_AMFLAGS=-I m4

EXTRA_DIST = 			\
	$(pkgconfig_DATA)	\
	AUTHORS			\
	COPYING-DOCS		\
	COPYING.LGPL2		\
	COPYING.LGPL3		\
	COPYING.OPENLDAP	\
	README			\
	HACKING			\
	MAINTAINERS		\
	NEWS			\
	NEWS-1.0		\
	marshal.mk		\
	iconv-detect.c		\
	plugin.mk		\
	intltool-merge.in	\
	intltool-update.in	\
	intltool-extract.in	\
	gnome-doc-utils.make    \
	gtk-doc.make


SUBDIRS = 			\
	po			\
	man			\
	data			\
	util			\
	widgets			\
	impuesto
 

MAINTAINERCLEANFILES =			\
	$(srcdir)/ABOUT-NLS		\
	$(srcdir)/INSTALL		\
	$(srcdir)/aclocal.m4		\
	$(srcdir)/autoscan.log		\
	$(srcdir)/compile		\
	$(srcdir)/config.guess		\
	$(srcdir)/config.h.in		\
	$(srcdir)/config.rpath		\
	$(srcdir)/config.sub		\
	$(srcdir)/configure.scan	\
	$(srcdir)/depcomp		\
	$(srcdir)/install-sh		\
	$(srcdir)/ltmain.sh		\
	$(srcdir)/missing		\
	$(srcdir)/mkinstalldirs		\
	$(srcdir)/gnome-doc-utils.make	\
	$(srcdir)/gtk-doc.make		\
	$(srcdir)/m4/codeset.m4		\
	$(srcdir)/m4/gettext.m4		\
	$(srcdir)/m4/glibc2.m4		\
	$(srcdir)/m4/glibc21.m4		\
	$(srcdir)/m4/gnome-doc-utils.m4	\
	$(srcdir)/m4/gtk-doc.m4		\
	$(srcdir)/m4/iconv.m4		\
	$(srcdir)/m4/intdiv0.m4		\
	$(srcdir)/m4/intl.m4		\
	$(srcdir)/m4/intldir.m4		\
	$(srcdir)/m4/intlmacosx.m4	\
	$(srcdir)/m4/intltool.m4	\
	$(srcdir)/m4/intmax.m4		\
	$(srcdir)/m4/inttypes-pri.m4	\
	$(srcdir)/m4/inttypes_h.m4	\
	$(srcdir)/m4/lcmessage.m4	\
	$(srcdir)/m4/lib-ld.m4		\
	$(srcdir)/m4/lib-link.m4	\
	$(srcdir)/m4/lib-prefix.m4	\
	$(srcdir)/m4/libtool.m4		\
	$(srcdir)/m4/lock.m4		\
	$(srcdir)/m4/longlong.m4	\
	$(srcdir)/m4/ltoptions.m4	\
	$(srcdir)/m4/ltsugar.m4		\
	$(srcdir)/m4/ltversion.m4	\
	$(srcdir)/m4/lt~obsolete.m4	\
	$(srcdir)/m4/nls.m4		\
	$(srcdir)/m4/po.m4		\
	$(srcdir)/m4/printf-posix.m4	\
	$(srcdir)/m4/progtest.m4	\
	$(srcdir)/m4/size_max.m4	\
	$(srcdir)/m4/stdint_h.m4	\
	$(srcdir)/m4/uintmax_t.m4	\
	$(srcdir)/m4/visibility.m4	\
	$(srcdir)/m4/wchar_t.m4		\
	$(srcdir)/m4/wint_t.m4		\
	$(srcdir)/m4/xsize.m4		\
	$(srcdir)/po/Makefile.in.in~	\
	$(srcdir)/po/Makevars.template	\
	$(srcdir)/po/Rules-quot		\
	$(srcdir)/po/boldquot.sed	\
	$(srcdir)/po/en@boldquot.header	\
	$(srcdir)/po/en@quot.header	\
	$(srcdir)/po/insert-header.sin	\
	$(srcdir)/po/quot.sed		\
	$(srcdir)/po/remove-potcdate.sin

# Generate a ChangeLog file from 'git log'
dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/build-aux/missing --run git log --stat ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi

